bpe-api/kubernates/Deployment-istio.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bpe-api
    version: 1.0.0
  name: bpe-api-1.0.0
  namespace: bpe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpe-api
      version: 1.0.0
  template:
    metadata:
      labels:
        app: bpe-api
        version: 1.0.0
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
          name: bpe-api
          image: <local ip>:5000/bpe-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: service-registry
