bpe-api/kubernates/Deployment-v1.0-default.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bpe-api
    version: v1.0
  name: bpe-api-v1.0
  namespace: bpe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpe-api
      version: v1.0
  template:
    metadata:
      labels:
        app: bpe-api
        version: v1.0
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
          name: bpe-api
          image: 192.168.1.110:5000/bpe-api:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
        - name: service-registry
