bpe-api/kubernates/Deployment-v1.0-padrao.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bpe-api
    version: v1
  name: bpe-api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpe-api
      version: v1
  template:
    metadata:
      labels:
        app: bpe-api
        version: v1
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
          name: bpe-api
          image: 192.168.1.110:5000/bpe-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl
                - -X GET
                - http://localhost:8080/health
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - curl
                - -X GET
                - http://localhost:8080/health
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: service-registry
