bpe-api/kubernates/Deployment-v1.1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bpe-api
    version: v1.1
  name: bpe-api-v1.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpe-api
      version: v1.1
  template:
    metadata:
      labels:
        app: bpe-api
        version: v1.1
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
          name: bpe-api
          image: 192.168.1.110:5000/bpe-api:v1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 10
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: service-registry
