bpe-api/kubernates/Deployment-v2.0-istio.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bpe-api
    version: v2.0
  name: bpe-api-v2.0
  namespace: bpe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpe-api
      version: v2.0
  template:
    metadata:
      labels:
        app: bpe-api
        version: v2.0
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: -Xms15m -Xmx15m -Xmn15m
          name: bpe-api
          image: 192.168.1.110:5000/bpe-api:v2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/health
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/health
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: service-registry
