bpe-api/kubernates/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: bpe-api
  namespace: bpe
  labels:
    app: bpe-api
    service: bpe-api
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: bpe-api
