bpe-api/kubernates/Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bpe-gateway
  namespace: bpe
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bpe-gateway
  namespace: bpe
spec:
  hosts:
    - "*"
  gateways:
    - bpe-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: bpe-api
            port:
              number: 8080
