bpe-api/kubernates/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bpe-ingress
  namespace: default
spec:
  backend:
    serviceName: bpe-api
    servicePort: 8080
